Added background to outlined card within dialog.

--- a/TnTComponents/Styles/Components/_dialogcontainer.default_theme.scss
+++ b/TnTComponents/Styles/Components/_dialogcontainer.default_theme.scss
@@ -2,6 +2,10 @@
 
     .tnt-card {
 
+        &.outlined {
+            background-color: $tnt-color-surface;
+        }
+
         & > span {
 
             i {
