--- a/TnTComponents/Styles/style.light.scss
+++ b/TnTComponents/Styles/style.light.scss
@@ -6,4 +6,5 @@
 @import 'Components/_sidenav.default_theme.scss';
 @import 'Components/_buttons.default_theme.scss';
 @import 'Components/_stack.default_theme.scss';
+@import 'Components/_tabview.default_theme.scss';
 @import 'Components/forms/_form.default_theme.scss';
