Fixed theme issue.

--- a/TnTComponents/Styles/Components/_tabview.default_theme.scss
+++ b/TnTComponents/Styles/Components/_tabview.default_theme.scss
@@ -22,12 +22,8 @@
     }
 
     &:not(.tnt-glider) .tnt-tab-view-header-items .tnt-tab-view-header {
-        &:after {
-            background-color: $tnt-color-on-primary-container;
-        }
-
         &.active {
-            color: $tnt-color-on-primary-container;
+            color: $tnt-color-primary;
         }
     }
 
