--- a/TnTComponents/Styles/Components/_tabview.scss
+++ b/TnTComponents/Styles/Components/_tabview.scss
@@ -6,6 +6,7 @@
         position: unset;
         display: flex;
         justify-content: center;
+        margin-bottom: 1rem;
 
         div {
             padding: 0 1.5rem;
