--- a/TnTComponents/Styles/Components/forms/_switch.scss
+++ b/TnTComponents/Styles/Components/forms/_switch.scss
@@ -4,6 +4,7 @@
     user-select: none;
     margin-top: 1rem;
     margin-bottom: 1rem;
+    position: relative;
 
     &.disabled {
         cursor: default;
