--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -1,11 +1,12 @@
 ﻿@import 'Common/_common.scss';
 @import 'Common/_grid.scss';
 @import 'Components/_body.scss';
-@import 'Components/_header.scss';
+@import 'Components/_buttons.scss';
 @import 'Components/_card.scss';
 @import 'Components/_dialogcontainer.scss';
+@import 'Components/_grid.scss';
+@import 'Components/_header.scss';
 @import 'Components/_sidenav.scss';
-@import 'Components/_buttons.scss';
 @import 'Components/_stack.scss';
 @import 'Components/_tabview.scss';
 @import 'Components/forms/_form.scss';
