--- a/TnTComponents/Styles/style.dark.scss
+++ b/TnTComponents/Styles/style.dark.scss
@@ -3,6 +3,7 @@
 @import 'Components/_header.default_theme.scss';
 @import 'Components/_card.default_theme.scss';
 @import 'Components/_dialogcontainer.default_theme.scss';
+@import 'Components/_grid.default_theme.scss';
 @import 'Components/_sidenav.default_theme.scss';
 @import 'Components/_buttons.default_theme.scss';
 @import 'Components/_stack.default_theme.scss';
