Updated background and surface colors.

--- a/TnTComponents/Styles/Common/_default_colors_tokens.scss
+++ b/TnTComponents/Styles/Common/_default_colors_tokens.scss
@@ -118,15 +118,15 @@ $tnt-color-error-light: #ba1a1a;
 $tnt-color-error-container-light: #ffdad6;
 $tnt-color-on-error-light: #ffffff;
 $tnt-color-on-error-container-light: #410002;
-$tnt-color-background-light: #f8fdff;
-$tnt-color-on-background-light: #001f25;
-$tnt-color-surface-light: #f8fdff;
-$tnt-color-on-surface-light: #001f25;
+$tnt-color-background-light: #f8f8f8;
+$tnt-color-on-background-light: #343434;
+$tnt-color-surface-light: #f8f8f8;
+$tnt-color-on-surface-light: #343434;
 $tnt-color-surface-variant-light: #e8e0eb;
 $tnt-color-on-surface-variant-light: #4a454e;
 $tnt-color-outline-light: #7b757f;
-$tnt-color-inverse-on-surface-light: #d6f6ff;
-$tnt-color-inverse-surface-light: #00363f;
+$tnt-color-inverse-on-surface-light: #f8f8f8;
+$tnt-color-inverse-surface-light: #343434;
 $tnt-color-inverse-primary-light: #dab9ff;
 $tnt-color-shadow-light: #00000022;
 $tnt-color-surface-tint-light: #7547ab;
@@ -149,15 +149,15 @@ $tnt-color-error-dark: #ffb4ab;
 $tnt-color-error-container-dark: #93000a;
 $tnt-color-on-error-dark: #690005;
 $tnt-color-on-error-container-dark: #ffdad6;
-$tnt-color-background-dark: #001f25;
-$tnt-color-on-background-dark: #a6eeff;
-$tnt-color-surface-dark: #001f25;
-$tnt-color-on-surface-dark: #a6eeff;
+$tnt-color-background-dark: #343434;
+$tnt-color-on-background-dark: #e7e7e7;
+$tnt-color-surface-dark: #343434;
+$tnt-color-on-surface-dark: #e7e7e7;
 $tnt-color-surface-variant-dark: #4a454e;
 $tnt-color-on-surface-variant-dark: #ccc4cf;
 $tnt-color-outline-dark: #958e98;
-$tnt-color-inverse-on-surface-dark: #001f25;
-$tnt-color-inverse-surface-dark: #a6eeff;
+$tnt-color-inverse-on-surface-dark: #343434;
+$tnt-color-inverse-surface-dark: #e7e7e7;
 $tnt-color-inverse-primary-dark: #7547ab;
 $tnt-color-shadow-dark: #FFFFFF66;
 $tnt-color-surface-tint-dark: #dab9ff;
