--- a/TnTComponents/Styles/Common/_default_colors_tokens.scss
+++ b/TnTComponents/Styles/Common/_default_colors_tokens.scss
@@ -1,71 +1,71 @@
-﻿$tnt-default-color-source: #5C2D91;
+﻿$tnt-default-color-source: #5B2C93;
   /* primary */
 $tnt-color-primary0: #000000;
-$tnt-color-primary10: #2a0053;
-$tnt-color-primary20: #440f79;
-$tnt-color-primary25: #502085;
-$tnt-color-primary30: #5c2d91;
-$tnt-color-primary35: #693a9e;
-$tnt-color-primary40: #7547ab;
-$tnt-color-primary50: #8f61c6;
-$tnt-color-primary60: #aa7be2;
-$tnt-color-primary70: #c695ff;
-$tnt-color-primary80: #dab9ff;
-$tnt-color-primary90: #efdbff;
-$tnt-color-primary95: #f9edff;
+$tnt-color-primary10: #2a0054;
+$tnt-color-primary20: #440e7c;
+$tnt-color-primary25: #501f87;
+$tnt-color-primary30: #5c2d94;
+$tnt-color-primary35: #683aa0;
+$tnt-color-primary40: #7547ad;
+$tnt-color-primary50: #8f60c9;
+$tnt-color-primary60: #a97ae5;
+$tnt-color-primary70: #c496ff;
+$tnt-color-primary80: #d9b9ff;
+$tnt-color-primary90: #eedbff;
+$tnt-color-primary95: #f8edff;
 $tnt-color-primary98: #fff7ff;
 $tnt-color-primary99: #fffbff;
 $tnt-color-primary100: #ffffff;
   /* secondary */
 $tnt-color-secondary0: #000000;
-$tnt-color-secondary10: #001d32;
-$tnt-color-secondary20: #003352;
-$tnt-color-secondary25: #003f63;
-$tnt-color-secondary30: #004a75;
-$tnt-color-secondary35: #005787;
-$tnt-color-secondary40: #00639a;
-$tnt-color-secondary50: #007dc0;
-$tnt-color-secondary60: #3297de;
-$tnt-color-secondary70: #56b2fb;
-$tnt-color-secondary80: #95ccff;
-$tnt-color-secondary90: #cde5ff;
-$tnt-color-secondary95: #e8f2ff;
-$tnt-color-secondary98: #f7f9ff;
-$tnt-color-secondary99: #fcfcff;
+$tnt-color-secondary10: #241a00;
+$tnt-color-secondary20: #3d2e00;
+$tnt-color-secondary25: #4b3900;
+$tnt-color-secondary30: #584400;
+$tnt-color-secondary35: #674f00;
+$tnt-color-secondary40: #755b00;
+$tnt-color-secondary50: #937300;
+$tnt-color-secondary60: #b28c00;
+$tnt-color-secondary70: #d2a500;
+$tnt-color-secondary80: #f3c000;
+$tnt-color-secondary90: #ffdf91;
+$tnt-color-secondary95: #ffefcf;
+$tnt-color-secondary98: #fff8f1;
+$tnt-color-secondary99: #fffbff;
 $tnt-color-secondary100: #ffffff;
   /* tertiary */
 $tnt-color-tertiary0: #000000;
-$tnt-color-tertiary10: #231b00;
-$tnt-color-tertiary20: #3c2f00;
-$tnt-color-tertiary25: #493a00;
-$tnt-color-tertiary30: #574500;
-$tnt-color-tertiary35: #655000;
-$tnt-color-tertiary40: #735c00;
-$tnt-color-tertiary50: #907400;
-$tnt-color-tertiary60: #af8d00;
-$tnt-color-tertiary70: #cfa700;
-$tnt-color-tertiary80: #eec215;
-$tnt-color-tertiary90: #ffe086;
-$tnt-color-tertiary95: #fff0cb;
-$tnt-color-tertiary98: #fff8f0;
-$tnt-color-tertiary99: #fffbff;
+$tnt-color-tertiary10: #001a41;
+$tnt-color-tertiary20: #002e69;
+$tnt-color-tertiary25: #00397e;
+$tnt-color-tertiary30: #004494;
+$tnt-color-tertiary35: #004fab;
+$tnt-color-tertiary40: #005ac1;
+$tnt-color-tertiary50: #2974e3;
+$tnt-color-tertiary60: #4c8eff;
+$tnt-color-tertiary70: #80aaff;
+$tnt-color-tertiary80: #adc6ff;
+$tnt-color-tertiary90: #d8e2ff;
+$tnt-color-tertiary95: #edf0ff;
+$tnt-color-tertiary98: #f9f9ff;
+$tnt-color-tertiary99: #fefbff;
 $tnt-color-tertiary100: #ffffff;
   /* neutral */
 $tnt-color-neutral0: #000000;
-$tnt-color-neutral10: #001f25;
-$tnt-color-neutral20: #00363f;
-$tnt-color-neutral25: #00424d;
-$tnt-color-neutral30: #004e5b;
-$tnt-color-neutral35: #005b69;
-$tnt-color-neutral40: #006878;
-$tnt-color-neutral50: #008396;
-$tnt-color-neutral60: #009fb6;
-$tnt-color-neutral70: #29bbd5;
-$tnt-color-neutral80: #53d7f1;
-$tnt-color-neutral90: #a6eeff;
-$tnt-color-neutral95: #d6f6ff;
-$tnt-color-neutral98: #effbff;
-$tnt-color-neutral99: #f8fdff;
+$tnt-color-neutral10: #1d1b1e;
+$tnt-color-neutral20: #322f33;
+$tnt-color-neutral25: #3d3a3e;
+$tnt-color-neutral30: #49464a;
+$tnt-color-neutral35: #555155;
+$tnt-color-neutral40: #615d61;
+$tnt-color-neutral50: #7a767a;
+$tnt-color-neutral60: #948f94;
+$tnt-color-neutral70: #afaaae;
+$tnt-color-neutral80: #cac5c9;
+$tnt-color-neutral90: #e7e1e5;
+$tnt-color-neutral95: #f5eff4;
+$tnt-color-neutral98: #fef7fc;
+$tnt-color-neutral99: #fffbff;
 $tnt-color-neutral100: #ffffff;
   /* neutral-variant */
 $tnt-color-neutral-variant0: #000000;
@@ -76,7 +76,7 @@ $tnt-color-neutral-variant30: #4a454e;
 $tnt-color-neutral-variant35: #56505a;
 $tnt-color-neutral-variant40: #625c66;
 $tnt-color-neutral-variant50: #7b757f;
-$tnt-color-neutral-variant60: #958e98;
+$tnt-color-neutral-variant60: #958e99;
 $tnt-color-neutral-variant70: #b0a9b3;
 $tnt-color-neutral-variant80: #ccc4cf;
 $tnt-color-neutral-variant90: #e8e0eb;
@@ -101,65 +101,94 @@ $tnt-color-error95: #ffedea;
 $tnt-color-error98: #fff8f7;
 $tnt-color-error99: #fffbff;
 $tnt-color-error100: #ffffff;
+
+$tnt-color-warning-seed: #FFF9BD00;
+$tnt-color-success-seed: #FF00D868;
+$tnt-color-info-seed: #FF41B7FF;
+
   /* light */
-$tnt-color-primary-light: #7547ab;
+$tnt-color-primary-light: #7547ad;
 $tnt-color-on-primary-light: #ffffff;
-$tnt-color-primary-container-light: #efdbff;
-$tnt-color-on-primary-container-light: #2a0053;
-$tnt-color-secondary-light: #00639a;
+$tnt-color-primary-container-light: #eedbff;
+$tnt-color-on-primary-container-light: #2a0054;
+$tnt-color-secondary-light: #755b00;
 $tnt-color-on-secondary-light: #ffffff;
-$tnt-color-secondary-container-light: #cde5ff;
-$tnt-color-on-secondary-container-light: #001d32;
-$tnt-color-tertiary-light: #735c00;
+$tnt-color-secondary-container-light: #ffdf91;
+$tnt-color-on-secondary-container-light: #241a00;
+$tnt-color-tertiary-light: #005ac1;
 $tnt-color-on-tertiary-light: #ffffff;
-$tnt-color-tertiary-container-light: #ffe086;
-$tnt-color-on-tertiary-container-light: #231b00;
+$tnt-color-tertiary-container-light: #d8e2ff;
+$tnt-color-on-tertiary-container-light: #001a41;
 $tnt-color-error-light: #ba1a1a;
 $tnt-color-error-container-light: #ffdad6;
 $tnt-color-on-error-light: #ffffff;
 $tnt-color-on-error-container-light: #410002;
-$tnt-color-background-light: #f8f8f8;
-$tnt-color-on-background-light: #343434;
-$tnt-color-surface-light: #f8f8f8;
-$tnt-color-on-surface-light: #343434;
+$tnt-color-background-light: #fffbff;
+$tnt-color-on-background-light: #1d1b1e;
+$tnt-color-surface-light: #fffbff;
+$tnt-color-on-surface-light: #1d1b1e;
 $tnt-color-surface-variant-light: #e8e0eb;
 $tnt-color-on-surface-variant-light: #4a454e;
 $tnt-color-outline-light: #7b757f;
-$tnt-color-inverse-on-surface-light: #f8f8f8;
-$tnt-color-inverse-surface-light: #343434;
-$tnt-color-inverse-primary-light: #dab9ff;
-$tnt-color-shadow-light: #00000022;
-$tnt-color-surface-tint-light: #7547ab;
+$tnt-color-inverse-on-surface-light: #f5eff4;
+$tnt-color-inverse-surface-light: #322f33;
+$tnt-color-inverse-primary-light: #d9b9ff;
+$tnt-color-shadow-light: #000000;
+$tnt-color-surface-tint-light: #7547ad;
 $tnt-color-outline-variant-light: #ccc4cf;
 $tnt-color-scrim-light: #000000;
-  /* dark */
-$tnt-color-primary-dark: #dab9ff;
-$tnt-color-on-primary-dark: #440f79;
-$tnt-color-primary-container-dark: #5c2d91;
-$tnt-color-on-primary-container-dark: #efdbff;
-$tnt-color-secondary-dark: #95ccff;
-$tnt-color-on-secondary-dark: #003352;
-$tnt-color-secondary-container-dark: #004a75;
-$tnt-color-on-secondary-container-dark: #cde5ff;
-$tnt-color-tertiary-dark: #eec215;
-$tnt-color-on-tertiary-dark: #3c2f00;
-$tnt-color-tertiary-container-dark: #574500;
-$tnt-color-on-tertiary-container-dark: #ffe086;
+$tnt-color-warning-light: #845400;
+$tnt-color-on-warning-light: #ffffff;
+$tnt-color-warning-container-light: #ffddb6;
+$tnt-color-on-warning-container-light: #2a1800;
+$tnt-color-success-light: #006c4c;
+$tnt-color-on-success-light: #ffffff;
+$tnt-color-success-container-light: #54febf;
+$tnt-color-on-success-container-light: #002115;
+$tnt-color-info-light: #0d60a8;
+$tnt-color-on-info-light: #ffffff;
+$tnt-color-info-container-light: #d3e3ff;
+$tnt-color-on-info-container-light: #001c39;
+/* dark */
+$tnt-color-primary-dark: #d9b9ff;
+$tnt-color-on-primary-dark: #440e7c;
+$tnt-color-primary-container-dark: #5c2d94;
+$tnt-color-on-primary-container-dark: #eedbff;
+$tnt-color-secondary-dark: #f3c000;
+$tnt-color-on-secondary-dark: #3d2e00;
+$tnt-color-secondary-container-dark: #584400;
+$tnt-color-on-secondary-container-dark: #ffdf91;
+$tnt-color-tertiary-dark: #adc6ff;
+$tnt-color-on-tertiary-dark: #002e69;
+$tnt-color-tertiary-container-dark: #004494;
+$tnt-color-on-tertiary-container-dark: #d8e2ff;
 $tnt-color-error-dark: #ffb4ab;
 $tnt-color-error-container-dark: #93000a;
 $tnt-color-on-error-dark: #690005;
 $tnt-color-on-error-container-dark: #ffdad6;
-$tnt-color-background-dark: #343434;
-$tnt-color-on-background-dark: #e7e7e7;
-$tnt-color-surface-dark: #343434;
-$tnt-color-on-surface-dark: #e7e7e7;
+$tnt-color-background-dark: #1d1b1e;
+$tnt-color-on-background-dark: #e7e1e5;
+$tnt-color-surface-dark: #1d1b1e;
+$tnt-color-on-surface-dark: #e7e1e5;
 $tnt-color-surface-variant-dark: #4a454e;
 $tnt-color-on-surface-variant-dark: #ccc4cf;
-$tnt-color-outline-dark: #958e98;
-$tnt-color-inverse-on-surface-dark: #343434;
-$tnt-color-inverse-surface-dark: #e7e7e7;
-$tnt-color-inverse-primary-dark: #7547ab;
-$tnt-color-shadow-dark: #FFFFFF66;
-$tnt-color-surface-tint-dark: #dab9ff;
+$tnt-color-outline-dark: #958e99;
+$tnt-color-inverse-on-surface-dark: #1d1b1e;
+$tnt-color-inverse-surface-dark: #e7e1e5;
+$tnt-color-inverse-primary-dark: #7547ad;
+$tnt-color-shadow-dark: #000000;
+$tnt-color-surface-tint-dark: #d9b9ff;
 $tnt-color-outline-variant-dark: #4a454e;
 $tnt-color-scrim-dark: #000000;
+$tnt-color-warning-dark: #ffb95a;
+$tnt-color-on-warning-dark: #462a00;
+$tnt-color-warning-container-dark: #643f00;
+$tnt-color-on-warning-container-dark: #ffddb6;
+$tnt-color-success-dark: #28e0a4;
+$tnt-color-on-success-dark: #003826;
+$tnt-color-success-container-dark: #005139;
+$tnt-color-on-success-container-dark: #54febf;
+$tnt-color-info-dark: #a3c9ff;
+$tnt-color-on-info-dark: #00315c;
+$tnt-color-info-container-dark: #004883;
+$tnt-color-on-info-container-dark: #d3e3ff;
