--- a/TnTComponents/Styles/Common/_default_theme.dark.scss
+++ b/TnTComponents/Styles/Common/_default_theme.dark.scss
@@ -31,4 +31,16 @@ $tnt-color-shadow: $tnt-color-shadow-dark;
 $tnt-color-surface-tint: $tnt-color-surface-tint-dark;
 $tnt-color-outline-variant: $tnt-color-outline-variant-dark;
 $tnt-color-scrim: $tnt-color-scrim-dark;
+$tnt-color-warning: $tnt-color-warning-dark;
+$tnt-color-on-warning: $tnt-color-on-warning-dark;
+$tnt-color-warning-container: $tnt-color-warning-container-dark;
+$tnt-color-on-warning-container: $tnt-color-on-warning-container-dark;
+$tnt-color-success: $tnt-color-success-dark;
+$tnt-color-on-success: $tnt-color-on-success-dark;
+$tnt-color-success-container: $tnt-color-success-container-dark;
+$tnt-color-on-success-container: $tnt-color-on-success-container-dark;
+$tnt-color-info: $tnt-color-info-dark;
+$tnt-color-on-info: $tnt-color-on-info-dark;
+$tnt-color-info-container: $tnt-color-info-container-dark;
+$tnt-color-on-info-container: $tnt-color-on-info-container-dark;
 
