--- a/TnTComponents/Styles/Common/_default_theme.light.scss
+++ b/TnTComponents/Styles/Common/_default_theme.light.scss
@@ -31,3 +31,15 @@ $tnt-color-shadow: $tnt-color-shadow-light;
 $tnt-color-surface-tint: $tnt-color-surface-tint-light;
 $tnt-color-outline-variant: $tnt-color-outline-variant-light;
 $tnt-color-scrim: $tnt-color-scrim-light;
+$tnt-color-warning: $tnt-color-warning-light;
+$tnt-color-on-warning: $tnt-color-on-warning-light;
+$tnt-color-warning-container: $tnt-color-warning-container-light;
+$tnt-color-on-warning-container: $tnt-color-on-warning-container-light;
+$tnt-color-success: $tnt-color-success-light;
+$tnt-color-on-success: $tnt-color-on-success-light;
+$tnt-color-success-container: $tnt-color-success-container-light;
+$tnt-color-on-success-container: $tnt-color-on-success-container-light;
+$tnt-color-info: $tnt-color-info-light;
+$tnt-color-on-info: $tnt-color-on-info-light;
+$tnt-color-info-container: $tnt-color-info-container-light;
+$tnt-color-on-info-container: $tnt-color-on-info-container-light;
