Fixed header colors to match md spec better

--- a/TnTComponents/Styles/Components/_header.default_theme.scss
+++ b/TnTComponents/Styles/Components/_header.default_theme.scss
@@ -1,4 +1,4 @@
 ﻿.tnt-header[theme=default] {
-    background-color: $tnt-color-primary;
-    color: $tnt-color-on-primary;
+    background-color: $tnt-color-surface;
+    color: $tnt-color-on-surface;
 }
