--- a/TnTComponents/Styles/Components/_body.scss
+++ b/TnTComponents/Styles/Components/_body.scss
@@ -10,11 +10,14 @@
 
 
     @media #{$medium-and-up} {
-        width: calc(100% - 250px);
-        margin-left: 250px;
+        width: calc(100% - calc(275px + 10px));
+        margin-left: 275px;
+        margin-right: 10px;
     }
 
     @media #{$small-and-down} {
         transform: translateX(0%);
+        width: calc(100% - 20px);
+        margin: 0 10px;
     }
 }
