--- a/TnTComponents/Styles/Common/_default_colors_tokens.scss
+++ b/TnTComponents/Styles/Common/_default_colors_tokens.scss
@@ -70,6 +70,7 @@ $tnt-color-neutral100: #ffffff;
   /* neutral-variant */
 $tnt-color-neutral-variant0: #000000;
 $tnt-color-neutral-variant10: #1e1a22;
+$tnt-color-neutral-variant15: #28242c;
 $tnt-color-neutral-variant20: #332f37;
 $tnt-color-neutral-variant25: #3e3a42;
 $tnt-color-neutral-variant30: #4a454e;
@@ -127,6 +128,8 @@ $tnt-color-background-light: #fffbff;
 $tnt-color-on-background-light: #1d1b1e;
 $tnt-color-surface-light: #fffbff;
 $tnt-color-on-surface-light: #1d1b1e;
+$tnt-color-surface-container-low-light: $tnt-color-neutral-variant95;
+$tnt-color-on-surface-container-low-light: $tnt-color-neutral-variant15;
 $tnt-color-surface-variant-light: #e8e0eb;
 $tnt-color-on-surface-variant-light: #4a454e;
 $tnt-color-outline-light: #7b757f;
@@ -170,6 +173,8 @@ $tnt-color-background-dark: #1d1b1e;
 $tnt-color-on-background-dark: #e7e1e5;
 $tnt-color-surface-dark: #1d1b1e;
 $tnt-color-on-surface-dark: #e7e1e5;
+$tnt-color-surface-container-low-dark: $tnt-color-neutral-variant15;
+$tnt-color-on-surface-container-low-dark: $tnt-color-neutral-variant95;
 $tnt-color-surface-variant-dark: #4a454e;
 $tnt-color-on-surface-variant-dark: #ccc4cf;
 $tnt-color-outline-dark: #958e99;
