--- a/TnTComponents/Styles/Common/_default_theme.dark.scss
+++ b/TnTComponents/Styles/Common/_default_theme.dark.scss
@@ -43,4 +43,5 @@ $tnt-color-info: $tnt-color-info-dark;
 $tnt-color-on-info: $tnt-color-on-info-dark;
 $tnt-color-info-container: $tnt-color-info-container-dark;
 $tnt-color-on-info-container: $tnt-color-on-info-container-dark;
-
+$tnt-color-surface-container-low: $tnt-color-surface-container-low-dark;
+$tnt-color-on-surface-container-low: $tnt-color-on-surface-container-low-dark;
