--- a/TnTComponents/Styles/Common/_default_theme.light.scss
+++ b/TnTComponents/Styles/Common/_default_theme.light.scss
@@ -43,3 +43,5 @@ $tnt-color-info: $tnt-color-info-light;
 $tnt-color-on-info: $tnt-color-on-info-light;
 $tnt-color-info-container: $tnt-color-info-container-light;
 $tnt-color-on-info-container: $tnt-color-on-info-container-light;
+$tnt-color-surface-container-low: $tnt-color-surface-container-low-light;
+$tnt-color-on-surface-container-low: $tnt-color-on-surface-container-low-light;
