--- a/TnTComponents/Styles/Components/_buttons.default_theme.scss
+++ b/TnTComponents/Styles/Components/_buttons.default_theme.scss
@@ -1,17 +1,75 @@
 ﻿@use "sass:color";
 
 .tnt-btn[theme=default] {
-    @include colorize($tnt-color-primary-container, $property:background-color, $hover:true, $active:true);
-    @include colorize($tnt-color-on-primary-container, $property:color);
+    &:not(.outlined):not(.filled):not(.flat) {
+        background-color: $tnt-color-surface-container-low;
+        color: $tnt-color-primary;
 
-    &.outlined {
-        outline-color: $tnt-color-outline;
-        @include colorize($tnt-color-primary, $property:color, $hover:true, $active:true);
-        @include colorizeTransparent($tnt-color-surface, $hover:true, $active:true);
+
+        &:not(.disabled) {
+            &:hover {
+                background-color: color.adjust($tnt-color-surface-container-low, $lightness:-1%);
+                color: color.adjust($tnt-color-primary, $lightness:-1%);
+            }
+
+            &:active {
+                background-color: color.adjust($tnt-color-surface-container-low, $lightness:-2%);
+                color: color.adjust($tnt-color-primary, $lightness:-2%);
+            }
+        }
     }
 
     &.filled {
-        @include colorize($tnt-color-primary, $property:background-color, $hover:true, $active:true);
+        background-color: $tnt-color-primary;
         color: $tnt-color-on-primary;
+
+        &:not(.disabled) {
+            &:hover {
+                background-color: color.adjust($tnt-color-primary, $lightness:-1%);
+                color: color.adjust($tnt-color-on-primary, $lightness:-1%);
+            }
+
+            &:active {
+                background-color: color.adjust($tnt-color-primary, $lightness:-2%);
+                color: color.adjust($tnt-color-on-primary, $lightness:-2%);
+            }
+        }
+    }
+
+    &.outlined {
+        border-color: $tnt-color-outline;
+        color: $tnt-color-primary;
+
+        &:not(.disabled) {
+            &:hover {
+                background-color: color.adjust($tnt-color-on-surface, $alpha: -0.95);
+                color: color.adjust($tnt-color-primary, $lightness:-1%);
+            }
+
+            &:active {
+                background-color: color.adjust($tnt-color-on-surface, $alpha: -0.9);
+                color: color.adjust($tnt-color-primary, $lightness:-2%);
+            }
+        }
+    }
+
+    &.flat {
+        color: $tnt-color-primary;
+
+        &:not(.disabled) {
+            &:hover {
+                background-color: color.adjust($tnt-color-on-surface, $alpha: -0.95);
+                color: color.adjust($tnt-color-primary, $lightness:-1%);
+            }
+
+            &:active {
+                background-color: color.adjust($tnt-color-on-surface, $alpha: -0.9);
+                color: color.adjust($tnt-color-primary, $lightness:-2%);
+            }
+        }
+    }
+
+    &.disabled {
+        opacity: 0.5;
     }
 }
