--- a/TnTComponents/Styles/Components/_card.scss
+++ b/TnTComponents/Styles/Components/_card.scss
@@ -1,21 +1,16 @@
 ﻿.tnt-card {
     padding: 1rem;
-    width: -moz-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
     margin: 1rem;
-    display: flex;
-    flex-direction: column;
-    @extend .tnt-border-radius-3;
-    @extend .tnt-z-depth-3;
 
-    &.flat, &.plain, &.outlined {
-        @extend .tnt-z-depth-0;
+    @extend .tnt-border-radius-3;
+
+    &.elevated {
+        @extend .tnt-z-depth-1;
     }
 
     &.outlined {
+        background-color: transparent;
         border-style: solid;
         border-width: 1px;
-        background-color: transparent;
     }
 }
