Minor change to dialog style

--- a/TnTComponents/Styles/Components/_dialogcontainer.default_theme.scss
+++ b/TnTComponents/Styles/Components/_dialogcontainer.default_theme.scss
@@ -1,12 +1,10 @@
 ﻿.tnt-dialog-container[theme=default] {
 
     .tnt-card {
-
-        &.outlined {
-            background-color: $tnt-color-surface;
-        }
+        background-color: $tnt-color-surface-variant;
 
         & > span {
+            color: $tnt-color-on-surface-variant;
 
             i {
                 color: $tnt-color-on-surface-variant;
