Reworked the way the side nav works.

--- a/TnTComponents.Testing/TnTComponents.Server/Components/Layout/MainLayout.razor
+++ b/TnTComponents.Testing/TnTComponents.Server/Components/Layout/MainLayout.razor
@@ -1,5 +1,20 @@
-﻿@inherits LayoutComponentBase
+﻿@using global::TnTComponents.Layout
+@inherits LayoutComponentBase
+This is before
+<TnTLayout>
 
-@Body
 
-<TnTComponents />
+    <TnTHeader>
+        This is my header
+    </TnTHeader>
+    <TnTSideNav>
+        This is my side nav
+    </TnTSideNav>
+
+    <TnTBody>
+        This is my body
+    </TnTBody>
+
+
+</TnTLayout>
+This is after
