Added ability to render layout statically and interactivly.

--- a/TnTComponents.Testing/TnTComponents.Server/Components/Layout/MainLayout.razor
+++ b/TnTComponents.Testing/TnTComponents.Server/Components/Layout/MainLayout.razor
@@ -2,19 +2,22 @@
 @inherits LayoutComponentBase
 This is before
 <TnTLayout>
-
-
-    <TnTHeader>
+    <Header>
         This is my header
-    </TnTHeader>
-    <TnTSideNav>
+        <TnTSideNavToggle></TnTSideNavToggle>
+    </Header>
+
+    <SideNav>
         This is my side nav
-    </TnTSideNav>
+    </SideNav>
 
-    <TnTBody>
+    <Body>
         This is my body
-    </TnTBody>
+    </Body>
 
+    <Footer>
+        This is my footer
+    </Footer>
 
 </TnTLayout>
 This is after
