--- a/TnTComponents/Layout/TnTLayout.razor
+++ b/TnTComponents/Layout/TnTLayout.razor
@@ -1,26 +1,127 @@
 ﻿
-<CascadingValue IsFixed="true" Value="_context">
-    @if (_context.SideNav is not null) {
-        @_context.SideNav
-    }
-    @if (_context.Header is not null) {
-        @_context.Header
+<CascadingValue IsFixed="true" Value="this">
+    @if(Header is not null) {
+        <div class="@BuildCssClassList(HeaderCssClass)" theme="@Theme" id="@_tntHeaderId">
+            @Header
+        </div>
     }
 
-    @_context.Body
+    @if(SideNav is not null) {
+        <div class="@BuildCssClassList(SideNavCssClass)" theme="@Theme" id="@TnTSideNavId">
+            @SideNav
+        </div>
+    }
 
-    @ChildContent
+    <div class="@BuildCssClassList(BodyCssClass)" theme="@Theme" id="@_tntBodyId">
+        @Body
+    </div>
+    
+    @if(Footer is not null) {
+        <div class="@BuildCssClassList(FooterCssClass)" theme="@Theme" id="@_tntFooterId">
+            @Footer
+        </div>
+    }
 </CascadingValue>
-@*@if (TnTSideNav is not null && TnTHeader is not null) {
+@if(SideNav is not null && !Interactive && false) {
     var functionName = "func_" + Guid.NewGuid().ToString().Replace("-", string.Empty);
     <script type="text/javascript">
-        
-        function @(functionName!)(headerId, sideNavId) {
-            TnTComponents.sideNavCallback(document.getElementById(headerId), document.getElementById(sideNavId));
+        function @(functionName!)() {
+    let sideNav = document.getElementById(
+                "@(TnTSideNavId)"
+    );
+    if (!sideNav) {
+        return;
+    }
+
+            TnTLayout.sideNavCallback(document.getElementById(
+        "@(_tntBodyId)"
+    ),
+        sideNav);
+
+        @if(Header is not null) {
+        <text>
+                    TnTLayout.sideNavCallback(document.getElementById(
+                "@(_tntHeaderId)"
+            ),
+                sideNav);
+        </text>
         }
-        window.onload = @(functionName)(
-            "@(_tntHeaderId)",
-            "@(_tntSideNavId)"
-            );
+
+        @if(Footer is not null) {
+         <text>
+                    TnTLayout.sideNavCallback(document.getElementById(
+                "@(_tntFooterId)"
+            ),
+                sideNav);
+         </text>   
+
+        }
+        }
+
+        window.TnTLayout = {
+
+            sideNavCallbacks: [],
+            sideNavCallback: function (element, sideNavElement) {
+                if (element && sideNavElement) {
+                    function expandAdded() {
+                        element.classList.add('expand');
+                    };
+
+                    function expandRemove() {
+                        element.classList.remove('expand');
+                    }
+
+
+                    this.sideNavCallbacks[element.id] = new TnTClassWatcher(sideNavElement, 'expand', expandAdded, expandRemove);
+                }
+            },
+        }
+
+        class TnTClassWatcher {
+            constructor(targetNode, classToWatch, classAddedCallback, classRemovedCallback) {
+                this.targetNode = targetNode
+                this.classToWatch = classToWatch
+                this.classAddedCallback = classAddedCallback
+                this.classRemovedCallback = classRemovedCallback
+                this.observer = null
+                this.lastClassState = targetNode.classList.contains(this.classToWatch)
+
+                this.init()
+            }
+
+            init() {
+                this.observer = new MutationObserver(this.mutationCallback)
+                this.observe()
+            }
+
+            observe() {
+                this.observer.observe(this.targetNode, { attributes: true })
+            }
+
+            disconnect() {
+                this.observer.disconnect()
+            }
+
+            mutationCallback = mutationsList => {
+                for (let mutation of mutationsList) {
+                    if (mutation.type === 'attributes' && mutation.attributeName === 'class') {
+                        let currentClassState = mutation.target.classList.contains(this.classToWatch)
+                        if (this.lastClassState !== currentClassState) {
+                            this.lastClassState = currentClassState
+                            if (currentClassState) {
+                                this.classAddedCallback()
+                            }
+                            else {
+                                this.classRemovedCallback()
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        window.onload = @(functionName)();
+
+
     </script>
-}*@
+}
