--- a/TnTComponents.Testing/TnTComponents.Client/Pages/Home.razor
+++ b/TnTComponents.Testing/TnTComponents.Client/Pages/Home.razor
@@ -1,5 +1,4 @@
-﻿@page "/"
-@using System.ComponentModel.DataAnnotations;
+﻿@using System.ComponentModel.DataAnnotations;
 @using global::TnTComponents.Grid
 @using global::TnTComponents.Services
 @using global::TnTComponents.Forms
