--- a/TnTComponents/Layout/TnTLayout.razor
+++ b/TnTComponents/Layout/TnTLayout.razor
@@ -22,41 +22,30 @@
         </div>
     }
 </CascadingValue>
-@if(SideNav is not null && !Interactive && false) {
+@if(SideNav is not null && !Interactive) {
     var functionName = "func_" + Guid.NewGuid().ToString().Replace("-", string.Empty);
     <script type="text/javascript">
         function @(functionName!)() {
-    let sideNav = document.getElementById(
-                "@(TnTSideNavId)"
-    );
-    if (!sideNav) {
-        return;
-    }
+            let sideNav = document.getElementById("@(TnTSideNavId)");
 
-            TnTLayout.sideNavCallback(document.getElementById(
-        "@(_tntBodyId)"
-    ),
-        sideNav);
+            if (!sideNav) {
+                return;
+            }
 
-        @if(Header is not null) {
-        <text>
-                    TnTLayout.sideNavCallback(document.getElementById(
-                "@(_tntHeaderId)"
-            ),
-                sideNav);
-        </text>
+            TnTLayout.sideNavCallback(document.getElementById("@(_tntBodyId)"), sideNav);
+
+        @if (Header is not null) {
+            <text>TnTLayout.sideNavCallback(document.getElementById(
+                "@_tntHeaderId"
+            ), sideNav); </text>
         }
 
-        @if(Footer is not null) {
-         <text>
-                    TnTLayout.sideNavCallback(document.getElementById(
-                "@(_tntFooterId)"
-            ),
-                sideNav);
-         </text>   
-
+        @if (Footer is not null) {
+            <text>TnTLayout.sideNavCallback(document.getElementById(
+                "@_tntFooterId"
+            ), sideNav); </text>
         }
-        }
+                }
 
         window.TnTLayout = {
 
@@ -75,44 +64,58 @@
                     this.sideNavCallbacks[element.id] = new TnTClassWatcher(sideNavElement, 'expand', expandAdded, expandRemove);
                 }
             },
+            toggle: function () {
+                var sideNav = document.getElementById(
+                    '@(TnTSideNavId)'
+                );
+                if (!sideNav || !sideNav.classList) {
+                    return;
+                }
+                if (!sideNav.classList.contains('@(TnTLayout.ExpandClass)')) {
+                    sideNav.classList.add('@(TnTLayout.ExpandClass)');
+                }
+                else {
+                    sideNav.classList.remove('@(TnTLayout.ExpandClass)');
+                }
+            }
         }
 
         class TnTClassWatcher {
             constructor(targetNode, classToWatch, classAddedCallback, classRemovedCallback) {
-                this.targetNode = targetNode
-                this.classToWatch = classToWatch
-                this.classAddedCallback = classAddedCallback
-                this.classRemovedCallback = classRemovedCallback
-                this.observer = null
-                this.lastClassState = targetNode.classList.contains(this.classToWatch)
+                this.targetNode = targetNode;
+                this.classToWatch = classToWatch;
+                this.classAddedCallback = classAddedCallback;
+                this.classRemovedCallback = classRemovedCallback;
+                this.observer = null;
+                this.lastClassState = targetNode.classList.contains(this.classToWatch);
 
-                this.init()
+                this.init();
             }
 
             init() {
-                this.observer = new MutationObserver(this.mutationCallback)
-                this.observe()
+                this.observer = new MutationObserver(this.mutationCallback);
+                this.observe();
             }
 
             observe() {
-                this.observer.observe(this.targetNode, { attributes: true })
+                this.observer.observe(this.targetNode, { attributes: true });
             }
 
             disconnect() {
-                this.observer.disconnect()
+                this.observer.disconnect();
             }
 
             mutationCallback = mutationsList => {
                 for (let mutation of mutationsList) {
                     if (mutation.type === 'attributes' && mutation.attributeName === 'class') {
-                        let currentClassState = mutation.target.classList.contains(this.classToWatch)
+                        let currentClassState = mutation.target.classList.contains(this.classToWatch);
                         if (this.lastClassState !== currentClassState) {
-                            this.lastClassState = currentClassState
+                            this.lastClassState = currentClassState;
                             if (currentClassState) {
-                                this.classAddedCallback()
+                                this.classAddedCallback();
                             }
                             else {
-                                this.classRemovedCallback()
+                                this.classRemovedCallback();
                             }
                         }
                     }
